[package]
name = "fluxor"
version = "0.9.0"
authors = ["Montasir Mirghani <me@montasir.site>"]
edition = "2024"
description = "Fluxor is a versatile Rust web framework designed for data science and computing science applications."
license = "MIT OR Apache-2.0"
homepage = "https://github.com/dr-montasir/fluxor"
repository = "https://github.com/dr-montasir/fluxor"
readme = "README.md"
keywords = ["fluxor", "async", "framework", "web", "data-science"]
categories = [
  "network-programming",
  "asynchronous",
  "web-programming::http-server",
  "web-programming::http-client",
  "data-structures"
]

exclude = [
  ".env",
  "Cargo.lock",
  "DEV-INFO.md",
  "fluxor-icon-64x64.svg",
  "fluxor-logo-dark-66x82.svg",
  "fluxor-logo-light-66x82.svg"
]

[dependencies]
fluxio = { version = "0.5.0", features = ["runtime", "http1", "server"] }
tokio = { version = "1.47.1", features = ["full"] }
dotenv = "0.15.0"
url = "2.5.7"
wtime = "0.7.0"
mysql_async = "0.36.1"
serde = "1.0.228"
serde_json = "1.0.145"
cans = "1.1.0"
mathlab = "1.5.0"
styledlog = "0.2.1"
